--- a/index.html
+++ b/index.html
@@ -8,6 +8,16 @@
     <title>Simon says</title>
 </head>
 <body>
+    <h1>Simon Says</h1>
+    <section id="gioco">
+        <p>Ecco i numeri che devi ricordare:</p>
+        <p id="numeri"></p>
+    </section>
+    <section id="input" class="hide">
+        <p>Inserisci i numeri che hai visto uno alla volta e premi 'Invia'</p>
+        <input id="userinput" type="text">
+        <input id="btn" type="button" value="Invia">
+    </section>
     
 
 
